# qBittorrent-ClientBlocker

./: .gitignore  BTN.go  BTN_test.go  BitComet.go  Dockerfile  LICENSE  README.en.md  README.md  SyncServer.go  SyncServer_test.go  Transmission.go  blockIP.txt  blockList-Optional.json  blockList.json  blockListOptional.json  client.go  client_BitComet.go  client_Transmission.go  client_qBittorrent.go  client_test.go  client_types.go  config.go  config.json  config.toml  config_file_test.go  console.go  console_test.go  crash.go  crash_test.go  entrypoint.sh  getproxy_common.go  getproxy_other.go  go.mod  go.sum  i18n.go  icon.go  ip.go  ipBlockList.txt  log.go  log_test.go  (+19 more)
.github/workflows/: ci-test.yaml  dev.yaml  docker.yaml  release.yaml
doc/: README.md  SyncServer.md  config.full.json  pyproject.toml
lang/: en.json
systemd/: qbittorrent-clientblocker.service
